--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,44 @@
     <style name="Base.Theme.DogCatI" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+<!--        &lt;!&ndash; สีพื้นหลังของแอป &ndash;&gt;-->
+<!--        <item name="android:background">@color/white</item>-->
+<!--        &lt;!&ndash; สี Status Bar &ndash;&gt;-->
+<!--        <item name="android:statusBarColor">@color/white</item>-->
+<!--        &lt;!&ndash; ใช้ Light Status Bar (ไอคอนสีเข้ม) &ndash;&gt;-->
+<!--        <item name="android:windowLightStatusBar">true</item>-->
+<!--        &lt;!&ndash; สี Navigation Bar &ndash;&gt;-->
+<!--        <item name="android:navigationBarColor">@color/white</item>-->
+<!--        &lt;!&ndash; สไตล์ Toolbar &ndash;&gt;-->
+<!--        <item name="actionBarStyle">@style/CustomActionBar</item>-->
+<!--        &lt;!&ndash; สไตล์ Bottom Navigation &ndash;&gt;-->
+<!--        <item name="bottomNavigationStyle">@style/CustomBottomNavigation</item>-->
     </style>
 
+
     <style name="Theme.DogCatI" parent="Base.Theme.DogCatI" />
+
+    <!-- Custom ActionBar Style -->
+    <style name="CustomActionBar" parent="Widget.MaterialComponents.ActionBar.Solid">
+        <item name="background">@color/white</item>
+        <item name="titleTextStyle">@style/CustomActionBarTitle</item>
+    </style>
+
+    <style name="CustomActionBarTitle" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <!-- Custom Bottom Navigation Style -->
+    <style name="CustomBottomNavigation" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="background">@color/white</item>
+        <item name="itemIconTint">@color/nav_item_tint</item>
+        <item name="itemTextColor">@color/nav_item_tint</item>
+    </style>
+
+    <style name="Theme.DogCatAndI.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="postSplashScreenTheme">@style/Base.Theme.DogCatI</item>
+    </style>
 </resources>
